# GameEditor

./: .editorconfig  .gitmodules  CMakeLists.txt  README.md
res/materials/: missing.mat
res/prefabs/: cube.pfb  speeder.pfb  speeder_without_guns.pfb
res/rendering_strategies/background_compute_effects/: editor.cei
res/scenes/: editor.scn  testscene.scn
res/shaders/: coloured_triangle_mesh.vert  phong.frag
src/: main.cpp
src/Demo/: ScriptPublications.h
src/Editor/: Display.h  Editor.h  EditorGUIRenderingStrategy.cpp  EditorGUIRenderingStrategy.h  EntityDetails.cpp  HotShaderReload.cpp  HotShaderReload.h  ImGUIManager.cpp  ImGUIManager.h  Publishable.cpp  Publishable.h  SceneView.cpp
src/Editor/Components/: Camera.h  Display.h  EditorComponent.h  MeshRenderer.h  Script.h  Transform.h
src/Editor/Deserialization/: EditorComponents.h
src/Editor/Publications/: Components.h  NumericTypes.h
src/Editor/Views/: EntityDetails.cpp  EntityDetails.h  RenderView.h  SceneView.cpp  SceneView.h
